# holiday-card

./: .gitignore  CLAUDE.md  DEVCONTAINER_SETUP.md  README.md  example_card.py  pyproject.toml  requirements.txt
.claude/agents/: agent-builder.md  agent-skill-analyzer.md  artifact-example-generator.md  devcontainer-builder.md  holiday-card-generator.md  sdlc-phase-planner.md  sdlc-repository-builder.md  skill-builder.md  speckit-operator.md  uncle-duke-java.md  uncle-duke-python.md
.claude/skills/django-conventions/: SKILL.md
.claude/skills/fastapi-patterns/: SKILL.md
.claude/skills/python-testing-standards/: SKILL.md
.claude/skills/python-type-hints-guide/: README.md
.devcontainer/: README.md  devcontainer.json  setup.sh
.specify/memory/: constitution.md
decorative_elements/christmas/: geometric_tree.yaml  ornament_bauble.yaml  ornament_star.yaml  snowflake.yaml  star_topper.yaml  traditional_tree.yaml  wreath.yaml
decorative_elements/generic/: gift_box.yaml
decorative_elements/hanukkah/: dreidel.yaml  menorah.yaml
specs/001-holiday-card-generator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-holiday-card-generator/checklists/: requirements.md
specs/001-holiday-card-generator/contracts/: cli-interface.md
specs/002-text-overflow-prevention/: README.md  analysis-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-text-overflow-prevention/checklists/: requirements.md  test.md
specs/002-text-overflow-prevention/contracts/: README.md
specs/003-vector-graphics-and/: analysis-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-vector-graphics-and/contracts/: shape-yaml-schema.md
specs/004-vector-graphics-enhancement/: IMPLEMENTATION_COMPLETE.md  PHASE7_COMPLETION.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-vector-graphics-enhancement/checklists/: requirements.md
specs/004-vector-graphics-enhancement/contracts/: yaml-schema.md
src/holiday_card/: __init__.py  __main__.py
src/holiday_card/cli/: __init__.py  commands.py
src/holiday_card/core/: __init__.py  (+7 more)
templates/birthday/: balloons.yaml
templates/christmas/: artist.yaml  classic.yaml  festive_stripes.yaml  geometric.yaml  holiday_masterpiece.yaml  holly_wreath.yaml  metallic_ornaments.yaml  modern.yaml  photo_ornament.yaml  winter_sky.yaml
templates/generic/: celebration.yaml
templates/hanukkah/: menorah.yaml
tests/: conftest.py  performance_validation.py
tests/integration/: test_clipping_rendering.py  test_full_generation.py  test_pattern_rendering.py  test_svg_rendering.py
tests/unit/: test_clipping_masks.py  test_gradient_models.py  test_measurements.py  test_models.py  test_pattern_models.py  test_svg_models.py  test_svg_parser.py  test_text_utils.py  test_validators.py
themes/: birthday.yaml  christmas.yaml  generic.yaml  hanukkah.yaml
(+56 files in other folders)
