[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "holiday-card"
version = "1.0.0"
description = "CLI application for creating printable holiday greeting cards"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Holiday Card Team" }
]
keywords = ["greeting-cards", "pdf", "printing", "holidays", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Printing",
]
dependencies = [
    "reportlab>=4.0",
    "Pillow>=10.0",
    "typer[all]>=0.9",
    "PyYAML>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "pdf2image>=1.16",
    "imagehash>=4.3",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
holiday-card = "holiday_card.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/holiday_card"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "-ra",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "visual: Visual regression tests",
    "slow: Slow-running tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["holiday_card"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "reportlab.*",
    "yaml.*",
    "PIL.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/holiday_card"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
